--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,14 @@ Cargo.lock
 .env
 .idea/
 .vscode/
-*.pdb 
+*.pdb
+
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+dist/
+dist-ssr/
+*.local 
