--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,4 +3,16 @@ name = "rust_project"
 version = "0.1.0"
 edition = "2021"
 
-[dependencies] 
+[lib]
+crate-type = ["cdylib"]
+
+[dependencies]
+wasm-bindgen = "0.2"
+js-sys = "0.3"
+web-sys = { version = "0.3", features = [
+    "console",
+    "Window",
+    "Document",
+    "Element",
+    "HtmlElement"
+]} 
